// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > ConfigProvider locale.Input.placeholder should work 1`] = `
<input
  class="ant-input ant-input-outlined"
  placeholder="global placeholder"
  type="text"
  value=""
/>
`;

exports[`Form > Input placeholder should be priority to ConfigProvider locale.Input.placeholder 1`] = `
<input
  class="ant-input ant-input-outlined"
  placeholder="custom placeholder"
  type="text"
  value=""
/>
`;

exports[`Form > custom placeholder should work 1`] = `
<input
  class="ant-input ant-input-outlined"
  placeholder="custom placeholder"
  type="text"
  value=""
/>
`;

exports[`Form > default placeholder should be correct 1`] = `
<input
  class="ant-input ant-input-outlined"
  placeholder="Please enter"
  type="text"
  value=""
/>
`;
